Changelog
=========

0.21.6 (2017-01-25)
~~~~~~~~~~~~~~~~~~~
 * Fix case-insensitive tag creation when setting to a mix of new and existing tags are used
  * https://github.com/alex/django-taggit/pull/464

0.21.5 (2017-01-21)
~~~~~~~~~~~~~~~~~~~
 * Check for case-insensitive duplicates when creating new tags
  * https://github.com/alex/django-taggit/pull/461

0.21.4 (2017-01-10)
~~~~~~~~~~~~~~~~~~~
 * Support __gt__ and __lt__ ordering on Tags
  * https://github.com/alex/django-taggit/pull/456

0.21.3 (2016-10-07)
~~~~~~~~~~~~~~~~~~~
 * Fix list view
  * https://github.com/alex/django-taggit/pull/444

0.21.2 (2016-08-31)
~~~~~~~~~~~~~~~~~~~
 * Update Python version classifiers in setup.py
  * https://github.com/alex/django-taggit/pull/438
 * Add Greek translation
  * https://github.com/alex/django-taggit/pull/439

0.21.1 (2016-08-25)
~~~~~~~~~~~~~~~~~~~
 * Document supported versions of Django; fix Travis to test these versions.
  * https://github.com/alex/django-taggit/pull/435

0.21.0 (2016-08-22)
~~~~~~~~~~~~~~~~~~~
 * Fix form tests on Django 1.10
  * https://github.com/alex/django-taggit/pull/433
 * Address list_display and fieldsets in admin docs
  * https://github.com/alex/django-taggit/pull/429
 * external_apps.txt improvements
  * https://github.com/alex/django-taggit/pull/428
 * Remove support for Django 1.4-1.6, again.
  * https://github.com/alex/django-taggit/pull/427

0.20.2 (2016-07-11)
~~~~~~~~~~~~~~~~~~~
 * Add extra_filters argument to the manager's most_common method
  * https://github.com/alex/django-taggit/pull/422

0.20.1 (2016-06-23)
~~~~~~~~~~~~~~~~~~~
 * Specify `app_label` for `Tag` and `TaggedItem`
  * https://github.com/alex/django-taggit/pull/420

0.20.0 (2016-06-19)
~~~~~~~~~~~~~~~~~~~
 * Fix UnboundLocalError in _TaggableManager.set(..)
  * https://github.com/alex/django-taggit/pull/418
 * Update doc links to reflect RTD domain changes
  * https://github.com/alex/django-taggit/pull/417
 * Improve Russian translations