@@ -2,20 +2,14 @@ language: python
 sudo: false
 matrix:
   include:
-    - env: TOXENV=py27-1.7.x
-      python: 2.7
     - env: TOXENV=py27-1.8.x
       python: 2.7
     - env: TOXENV=py27-1.9.x
       python: 2.7
     - env: TOXENV=py27-1.10.x
       python: 2.7
-    - env: TOXENV=py33-1.7.x
-      python: 3.3
     - env: TOXENV=py33-1.8.x
       python: 3.3
-    - env: TOXENV=py34-1.7.x
-      python: 3.4
     - env: TOXENV=py34-1.8.x
       python: 3.4
     - env: TOXENV=py34-1.9.x
