@@ -4,7 +4,7 @@ Welcome to django-taggit's documentation!
 ``django-taggit`` is a reusable Django application designed to making adding
 tagging to your project easy and fun.
 
-``django-taggit`` works with Django 1.7+ and Python 2.7-3.X.
+``django-taggit`` works with Django 1.8+ and Python 2.7-3.X.
 
 .. toctree::
    :maxdepth: 2
