@@ -1,4 +1,4 @@
-Django
+Django>=1.8
 coverage
 pytest
 pytest-cov
