@@ -1,13 +1,11 @@
 [tox]
 envlist =
-    {py27,py33,py34}-1.7.x
     {py27,py33,py34,py35}-1.8.x
     {py27,py34,py35}-1.9.x
     {py27,py34,py35}-1.10.x
 
 [testenv]
 deps =
-    1.7.x: https://github.com/django/django/archive/stable/1.7.x.tar.gz#egg=django
     1.8.x: https://github.com/django/django/archive/stable/1.8.x.tar.gz#egg=django
     1.9.x: https://github.com/django/django/archive/stable/1.9.x.tar.gz#egg=django
     1.10.x: https://github.com/django/django/archive/stable/1.10.x.tar.gz#egg=django
